--- a/config/roughlyenoughitems/config.json5
+++ b/config/roughlyenoughitems/config.json5
@@ -4,7 +4,9 @@
 			"{mode:\"MORN\",type:\"roughlyenoughitems:time\"}"
 		],
 		"hiddenFavorites": [],
-		"displayHistory": [],
+		"displayHistory": [
+			"{DisplayHistoryCategory:\"jeresources:worldgen\",DisplayHistoryContains:0b,DisplayHistoryUUID:\"5f086129-1f66-4e79-a116-20a3537e6e09\"}"
+		],
 		// Declares whether cheating mode is on.
 		"cheating": false,
 		"favoritesEnabled": true,
@@ -62,8 +64,7 @@
 			"shouldFilterDisplays": true,
 			"filteringRules": [
 				"{id:\"roughlyenoughitems:manual\",rule:{}}",
-				"{id:\"roughlyenoughitems:basic\",rule:{}}",
-				"{id:\"roughlyenoughitems:hidden_from_recipe_viewers\",rule:{}}"
+				"{id:\"roughlyenoughitems:basic\",rule:{}}"
 			],
 			"filteringQuickCraftCategories": { },
 			"filteredStacks": []
