Added a patchouli book. Content needs to be revised since the entry on campfires is in fact not true.

--- a/config/Survive Configs/temperature-common.toml
+++ b/config/Survive Configs/temperature-common.toml
@@ -4,7 +4,7 @@
 #-------------------------------------------
 #Default: true
 #-------------------------------------------
-"Boolean: Enable" = false
+"Boolean: Enable" = true
 #
 ############################################
 #Disabling this will prevent players from sleeping if they have hyperthermia or hypothermia
