--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,8 +1,8 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sun Jan 07 03:15:35 PST 2024
+#Thu Jan 11 17:35:14 PST 2024
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=32
 shaderPack=
-enableShaders=true
+enableShaders=false
